--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -10,6 +10,10 @@ main_network_interface: 'enp0s8'
 nfs_server_group: nfs_masters
 nfs_client_group: nfs_clients
 nfs_server_ip_override: 192.168.205.12
+k8_admin_config_dir: ~/dev/bossjones/bosslab-playbooks
+k8_admin_config_path: "{{k8_admin_config_dir}}/borg-admin.conf"
+
+# export KUBECONFIG=~/dev/bossjones/bosslab-playbooks/borg-admin.conf
 
 #      .########..######..##.....##..#######...######..########.########..##.....##.########.########.
 #      .##.......##....##.##.....##.##.....##.##....##.##.......##.....##.##.....##.##.......##.....##
@@ -1054,7 +1058,6 @@ boss__weave__scope__enable_ingress_traefik: "enabled"
 boss__weave__scope__ingress_metadata_annotations: |
   traefik.frontend.rule.type: PathPrefix
 
-
 boss__prometheus__operator__subdomain: prometheus-operator
 boss__prometheus__operator__manifest_path: "{{manifest_dir_path}}/prometheus-operator-v0-27-0"
 boss__prometheus__operator__namespace_name: monitoring
@@ -1069,15 +1072,34 @@ boss__prometheus__operator__grafana_subdomain: grafana
 boss__prometheus__operator__grafana_version: 5.2.4
 boss__prometheus__operator__grafana_image_repo: "grafana/grafana"
 boss__prometheus__operator__grafana_image_tag: "{{ boss__prometheus__operator__grafana_version }}"
+boss__prometheus__operator__grafana_cpu_limit: 2000m
+boss__prometheus__operator__grafana_mem_limit: 500Mi
+boss__prometheus__operator__grafana_cpu_requests: 1000m
+boss__prometheus__operator__grafana_mem_requests: 200Mi
+boss__prometheus__operator__grafana_deployment_spec_template_spec_containers_resources: |
+  limits:
+    cpu: 2000m
+    memory: 200Mi
+  requests:
+    cpu: 1000m
+    memory: 100Mi
 
 boss__prometheus__operator__prometheus_subdomain: prometheus
 boss__prometheus__operator__prometheus_version: v2.5.0
 boss__prometheus__operator__prometheus_crd_baseImage: "quay.io/prometheus/prometheus"
 boss__prometheus__operator__prometheus_image_tag: "{{ boss__prometheus__operator__prometheus_version }}"
 
-boss__prometheus__operator__prometheus_operator_version: v0.26.0
+boss__prometheus__operator__prometheus_operator_version: v0.29.0
 boss__prometheus__operator__prometheus_operator_image_repo: "quay.io/coreos/prometheus-operator"
 boss__prometheus__operator__prometheus_operator_image_tag: "{{ boss__prometheus__operator__prometheus_operator_version }}"
+
+boss__prometheus__operator__configmap_reload_version: v0.0.1
+boss__prometheus__operator__configmap_reload_image_repo: "quay.io/coreos/configmap-reload"
+boss__prometheus__operator__configmap_reload_image_tag: "{{ boss__prometheus__operator__configmap_reload_version }}"
+
+boss__prometheus__operator__prometheus_operator_config_reloader_version: v0.29.0
+boss__prometheus__operator__prometheus_operator_config_reloader_image_repo: "quay.io/coreos/prometheus-config-reloader"
+boss__prometheus__operator__prometheus_operator_config_reloader_image_tag: "{{ boss__prometheus__operator__prometheus_operator_config_reloader_version }}"
 
 
 boss__prometheus__operator__alertmanager_ingress_metadata_annotations: |
@@ -1157,6 +1179,94 @@ boss__prometheus__operator__grafana_ingress_metadata_labels: |
   run: nginx
   app: grafana
 
+
+################# Persistent volume claims
+
+# persistent volume claim - grafana
+boss__prometheus__operator__grafana_pvc_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: prometheus-operator
+
+boss__prometheus__operator__grafana_pvc_spec_storageClassName: "nfs-dynamic-class"
+boss__prometheus__operator__grafana_pvc_spec_resources_requests_storage: "2Gi"
+
+# persistent volume - grafana
+boss__prometheus__operator__grafana_pv_labels: |
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    k8s-app: prometheus-operator
+    boss-part-of: prometheus-operator
+
+boss__prometheus__operator__grafana_pv_spec_capacity_storage: 2Gi
+boss__prometheus__operator__grafana_pv_spec_nfs: |
+    server: 192.168.205.12
+    path: "/mnt/publicdata/grafana"
+
+
+# persistent volume claim - prometheus-adapter-tmpfs
+boss__prometheus__operator__prometheus_adapter_tmpfs_pvc_labels: |
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    k8s-app: prometheus-operator
+
+boss__prometheus__operator__prometheus_adapter_tmpfs_pvc_spec_storageClassName: "nfs-dynamic-class"
+boss__prometheus__operator__prometheus_adapter_tmpfs_pvc_spec_resources_requests_storage: "250Mi"
+
+# persistent volume - prometheus-adapter-tmpfs
+boss__prometheus__operator__prometheus_adapter_tmpfs_pv_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: prometheus-operator
+  boss-part-of: prometheus-operator
+
+boss__prometheus__operator__prometheus_adapter_tmpfs_pv_spec_capacity_storage: 250Mi
+boss__prometheus__operator__prometheus_adapter_tmpfs_pv_spec_nfs: |
+    server: 192.168.205.12
+    path: "/mnt/publicdata/prometheus-adapter-tmpfs"
+
+# persistent volume claim - prometheus-adapter-volume-serving-cert
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pvc_labels: |
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    k8s-app: prometheus-operator
+
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pvc_spec_storageClassName: "nfs-dynamic-class"
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pvc_spec_resources_requests_storage: "250Mi"
+
+# persistent volume - prometheus-adapter-volume-serving-cert
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_labels: |
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    k8s-app: prometheus-operator
+    boss-part-of: prometheus-operator
+
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_spec_capacity_storage: 250Mi
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_spec_nfs: |
+    server: 192.168.205.12
+    path: "/mnt/publicdata/prometheus-adapter-volume-serving-cert"
+
+boss__prometheus__operator__prometheus_additional_scrape_configs: |
+  # RUN: kubectl --namespace monitoring create secret generic additional-scrape-configs --from-file=PLAINTEXT-SECRET-prometheus-additional.yaml --dry-run -oyaml > additional-scrape-configs.yaml
+  - job_name: 'netdata-scrape'
+
+    metrics_path: '/api/v1/allmetrics'
+    params:
+      # format: prometheus | prometheus_all_hosts
+      # You can use `prometheus_all_hosts` if you want Prometheus to set the `instance` to your hostname instead of IP
+      format: [prometheus]
+      #
+      # sources: as-collected | raw | average | sum | volume
+      # default is: average
+      #source: [as-collected]
+      #
+      # server name for this prometheus - the default is the client IP
+      # for netdata to uniquely identify it
+      #server: ['prometheus1']
+    honor_labels: true
+
+    static_configs:
+      - targets: ['192.168.205.10:19999','192.168.205.12:19999','192.168.205.13:19999']
 # ---
 # local_release_dir: /tmp/releases
 
