--- a/vars/clear/scarlett-k8_manifest.yml
+++ b/vars/clear/scarlett-k8_manifest.yml
@@ -10,6 +10,8 @@ nfs_server_group: nfs_masters
 nfs_client_group: nfs_clients
 # FIXME: THIS NEEDS TO BE CHANGED
 nfs_server_ip_override: 192.168.1.174
+k8_admin_config_dir: ~/dev/bossjones/bosslab-playbooks
+k8_admin_config_path: "{{k8_admin_config_dir}}/scarlett-k8s-admin.conf"
 
 #      .########..######..##.....##..#######...######..########.########..##.....##.########.########.
 #      .##.......##....##.##.....##.##.....##.##....##.##.......##.....##.##.....##.##.......##.....##
