--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -1214,6 +1214,18 @@ boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_spec_nfs: 
     server: 192.168.1.174
     path: "/mnt/publicdata/prometheus-adapter-volume-serving-cert"
 
+####################################################################################################
+#   .##.....##.##....##.####.########.####.........########.##.....##.########...#######..########..########.########.########.
+#   .##.....##.###...##..##..##........##..........##........##...##..##.....##.##.....##.##.....##....##....##.......##.....##
+#   .##.....##.####..##..##..##........##..........##.........##.##...##.....##.##.....##.##.....##....##....##.......##.....##
+#   .##.....##.##.##.##..##..######....##..#######.######......###....########..##.....##.########.....##....######...########.
+#   .##.....##.##..####..##..##........##..........##.........##.##...##........##.....##.##...##......##....##.......##...##..
+#   .##.....##.##...###..##..##........##..........##........##...##..##........##.....##.##....##.....##....##.......##....##.
+#   ..#######..##....##.####.##.......####.........########.##.....##.##.........#######..##.....##....##....########.##.....##
+####################################################################################################
+boss__unifi__exporter__subdomain: unifi-exporter
+boss__unifi__exporter__manifest_path: "{{manifest_dir_path}}/unifi-exporter"
+boss__unifi__exporter__namespace_name: monitoring
 
 #######################
 
