--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -1267,6 +1267,22 @@ boss__prometheus__operator__prometheus_additional_scrape_configs: |
 
     static_configs:
       - targets: ['192.168.205.10:19999','192.168.205.11:19999','192.168.205.12:19999']
+
+
+
+####################################################################################################
+#   .##.....##.##....##.####.########.####.........########.##.....##.########...#######..########..########.########.########.
+#   .##.....##.###...##..##..##........##..........##........##...##..##.....##.##.....##.##.....##....##....##.......##.....##
+#   .##.....##.####..##..##..##........##..........##.........##.##...##.....##.##.....##.##.....##....##....##.......##.....##
+#   .##.....##.##.##.##..##..######....##..#######.######......###....########..##.....##.########.....##....######...########.
+#   .##.....##.##..####..##..##........##..........##.........##.##...##........##.....##.##...##......##....##.......##...##..
+#   .##.....##.##...###..##..##........##..........##........##...##..##........##.....##.##....##.....##....##.......##....##.
+#   ..#######..##....##.####.##.......####.........########.##.....##.##.........#######..##.....##....##....########.##.....##
+####################################################################################################
+boss__unifi__exporter__subdomain: unifi-exporter
+boss__unifi__exporter__manifest_path: "{{manifest_dir_path}}/unifi-exporter"
+boss__unifi__exporter__namespace_name: monitoring
+
 # ---
 # local_release_dir: /tmp/releases
 
