--- a/vars/clear/scarlett-k8_manifest.yml
+++ b/vars/clear/scarlett-k8_manifest.yml
@@ -980,6 +980,21 @@ boss__traefik__internal__namespace_name: kube-system
 boss__traefik__internal__service_spec_type: LoadBalancer
 boss__traefik__internal__service_spec_loadBalancerIP: 192.168.1.50
 
+
+
+
+####################################################################################################
+#   .##.....##.##....##.####.########.####.........########.##.....##.########...#######..########..########.########.########.
+#   .##.....##.###...##..##..##........##..........##........##...##..##.....##.##.....##.##.....##....##....##.......##.....##
+#   .##.....##.####..##..##..##........##..........##.........##.##...##.....##.##.....##.##.....##....##....##.......##.....##
+#   .##.....##.##.##.##..##..######....##..#######.######......###....########..##.....##.########.....##....######...########.
+#   .##.....##.##..####..##..##........##..........##.........##.##...##........##.....##.##...##......##....##.......##...##..
+#   .##.....##.##...###..##..##........##..........##........##...##..##........##.....##.##....##.....##....##.......##....##.
+#   ..#######..##....##.####.##.......####.........########.##.....##.##.........#######..##.....##....##....########.##.....##
+####################################################################################################
+boss__unifi__exporter__subdomain: unifi-exporter
+boss__unifi__exporter__manifest_path: "{{manifest_dir_path}}/unifi-exporter"
+boss__unifi__exporter__namespace_name: monitoring
 # ---
 # local_release_dir: /tmp/releases
 
