--- a/extra_playbooks/roles/kubernetes-apps/unifi-exporter/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/unifi-exporter/tasks/main.yaml
@@ -16,11 +16,12 @@
     - "unifi-exporter-servicemonitor-router.yaml"
 
 
-- name: kubectl create secret unifi-exporter-credentials
+- name: kubectl create secret unifi-exporter-credentials and delete them so that we don't accidentally commit them
   shell: |
     kubectl --namespace={{boss__unifi__exporter__namespace_name}} create secret generic unifi-exporter-credentials --from-file={{ boss__unifi__exporter__manifest_path | expanduser }}/unifi-exporter-secret-config.yaml --dry-run -oyaml > {{ boss__unifi__exporter__manifest_path }}/unifi-exporter-credentials.yaml
     cat {{ boss__unifi__exporter__manifest_path }}/unifi-exporter-credentials.yaml
     rm {{ boss__unifi__exporter__manifest_path | expanduser }}/unifi-exporter-credentials.yaml
+    rm {{ boss__unifi__exporter__manifest_path | expanduser }}/unifi-exporter-secret-config.yaml
   become: '{{ item }}'
   args:
     executable: /bin/bash
