--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -96,10 +96,28 @@ boss__calico__cni_image_tag: "{{ boss__calico__node_version }}"
 
 boss__calico__node_daemonset_annotations: |
   scheduler.alpha.kubernetes.io/critical-pod: ''
-  prometheus.io/scrape: 'true'
-  prometheus.io/port: '9091'
+  prometheus.io/scrape: "true"
+  prometheus.io/port: "9091"
+
+boss__calico__enable_typha: "enabled"
+boss__calico__typha_service_name: calico-typha  # or none
 
 boss__calico__typha_deployment_spec_replicas: 3
+
+boss__calico__typha_service_annotations: |
+  prometheus.io/scrape: "true"
+  prometheus.io/port: "9093"
+
+boss__calico__typha_deployment_annotations: |
+  # This, along with the CriticalAddonsOnly toleration below, marks the pod as a critical
+  # add-on, ensuring it gets priority scheduling and that its resources are reserved
+  # if it ever gets evicted.
+  scheduler.alpha.kubernetes.io/critical-pod: ''
+  cluster-autoscaler.kubernetes.io/safe-to-evict: 'true'
+  prometheus.io/scrape: "true"
+  prometheus.io/port: "9093"
+
+
 
 # {{ calico_node_image_repo }}:{{ calico_node_image_tag }}
 
