--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -96,6 +96,8 @@ boss__calico__cni_image_tag: "{{ boss__calico__node_version }}"
 
 boss__calico__enable_prometheus_exporter_servicemonitor: "enabled"
 
+boss__calico__prometheus_exporter_namespace_name: monitoring
+
 boss__calico__felix_PrometheusMetricsPort: 9091
 boss__calico__typha_PrometheusMetricsPort: 9093
 
