--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -1310,6 +1310,14 @@ boss__unifi__exporter__namespace_name: monitoring
 boss__unifi__exporter__apply_changes_immediately: False
 boss__unifi__exporter__delete_secrets: True
 
+boss__unifi__exporter__listen_address: :9130
+boss__unifi__exporter__listen_metricspath: /metrics
+boss__unifi__exporter__unifi_address: https://192.168.1.8:8443
+boss__unifi__exporter__unifi_site: Hyenanet
+boss__unifi__exporter__unifi_insecure: true
+boss__unifi__exporter__unifi_timeout: 5s
+
+
 # ---
 # local_release_dir: /tmp/releases
 
