--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -1063,6 +1063,35 @@ boss__prometheus__operator__prometheus_version: v2.5.0
 boss__prometheus__operator__prometheus_crd_baseImage: "quay.io/prometheus/prometheus"
 boss__prometheus__operator__prometheus_image_tag: "{{ boss__prometheus__operator__prometheus_version }}"
 
+boss__prometheus__operator__node_exporter_version: v0.16.0
+boss__prometheus__operator__node_exporter_image_repo: "quay.io/prometheus/node-exporter"
+boss__prometheus__operator__node_exporter_image_tag: "{{ boss__prometheus__operator__node_exporter_version }}"
+boss__prometheus__operator__node_exporter_daemonset_spec_template_spec_containers_resources: |
+  limits:
+    cpu: 250m
+    memory: 180Mi
+  requests:
+    cpu: 102m
+    memory: 180Mi
+
+boss__prometheus__operator__kube_rbac_proxy_version: v0.4.0
+boss__prometheus__operator__kube_rbac_proxy_image_repo: "quay.io/coreos/kube-rbac-proxy"
+boss__prometheus__operator__kube_rbac_proxy_image_tag: "{{ boss__prometheus__operator__kube_rbac_proxy_version }}"
+boss__prometheus__operator__kube_rbac_proxy_daemonset_spec_template_spec_containers_resources: |
+  # NOTE: Orig below ( 3/3/2019 )
+  #limits:
+  #  cpu: 20m
+  #  memory: 40Mi
+  #requests:
+  #  cpu: 10m
+  #  memory: 20Mi
+  limits:
+    cpu: 100m
+    memory: 120Mi
+  requests:
+    cpu: 90m
+    memory: 60Mi
+
 boss__prometheus__operator__prometheus_operator_version: v0.29.0
 boss__prometheus__operator__prometheus_operator_image_repo: "quay.io/coreos/prometheus-operator"
 boss__prometheus__operator__prometheus_operator_image_tag: "{{ boss__prometheus__operator__prometheus_operator_version }}"
@@ -1218,6 +1247,37 @@ boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_spec_nfs: 
     server: 192.168.1.174
     path: "/mnt/publicdata/prometheus-adapter-volume-serving-cert"
 
+
+boss__prometheus__operator__prometheus_additional_scrape_configs: |
+  # RUN: kubectl --namespace monitoring create secret generic additional-scrape-configs --from-file=PLAINTEXT-SECRET-prometheus-additional.yaml --dry-run -oyaml > additional-scrape-configs.yaml
+  - job_name: 'netdata-scrape'
+
+    metrics_path: '/api/v1/allmetrics'
+    params:
+      # format: prometheus | prometheus_all_hosts
+      # You can use `prometheus_all_hosts` if you want Prometheus to set the `instance` to your hostname instead of IP
+      format: [prometheus]
+      #
+      # sources: as-collected | raw | average | sum | volume
+      # default is: average
+      #source: [as-collected]
+      #
+      # server name for this prometheus - the default is the client IP
+      # for netdata to uniquely identify it
+      #server: ['prometheus1']
+    honor_labels: true
+
+    static_configs:
+      - targets: ['http://borg-queen-01.scarlettlab.home:19999','http://borg-worker-01.scarlettlab.home:19999','http://borg-worker-02.scarlettlab.home:19999']
+
+# SOURCE: https://techtran.science/2018/06/11/unifi-to-grafana-using-prometheus-and-unifi_exporter/
+# - job_name: 'unifi_exporter'
+#   static_configs:
+#     - targets: ['dockerswarm:9130']
+#       labels:
+#         alias: unifi_exporter
+
+
 ####################################################################################################
 #   .##.....##.##....##.####.########.####.........########.##.....##.########...#######..########..########.########.########.
 #   .##.....##.###...##..##..##........##..........##........##...##..##.....##.##.....##.##.....##....##....##.......##.....##
@@ -1230,6 +1290,16 @@ boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_spec_nfs: 
 boss__unifi__exporter__subdomain: unifi-exporter
 boss__unifi__exporter__manifest_path: "{{manifest_dir_path}}/unifi-exporter"
 boss__unifi__exporter__namespace_name: monitoring
+boss__unifi__exporter__apply_changes_immediately: False
+boss__unifi__exporter__delete_secrets: True
+
+boss__unifi__exporter__port: 9130
+boss__unifi__exporter__listen_address: ":{{boss__unifi__exporter__port}}"
+boss__unifi__exporter__listen_metricspath: /metrics
+boss__unifi__exporter__unifi_address: https://192.168.1.8:8443
+boss__unifi__exporter__unifi_site: Hyenanet
+boss__unifi__exporter__unifi_insecure: true
+boss__unifi__exporter__unifi_timeout: 5s
 
 
 boss__unifi__exporter__service_annotations: |
