--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -1368,6 +1368,103 @@ boss__unifi__exporter__service_annotations: |
   prometheus.io/scrape: 'true'
   prometheus.io/port: '9091'
 
+
+
+
+##########################################################################################################
+#   .####.##....##.########.##.......##.....##.##.....##.########..########...........#######..########..########.########.....###....########..#######..########.
+#   ..##..###...##.##.......##.......##.....##..##...##..##.....##.##.....##.........##.....##.##.....##.##.......##.....##...##.##......##....##.....##.##.....##
+#   ..##..####..##.##.......##.......##.....##...##.##...##.....##.##.....##.........##.....##.##.....##.##.......##.....##..##...##.....##....##.....##.##.....##
+#   ..##..##.##.##.######...##.......##.....##....###....##.....##.########..#######.##.....##.########..######...########..##.....##....##....##.....##.########.
+#   ..##..##..####.##.......##.......##.....##...##.##...##.....##.##.....##.........##.....##.##........##.......##...##...#########....##....##.....##.##...##..
+#   ..##..##...###.##.......##.......##.....##..##...##..##.....##.##.....##.........##.....##.##........##.......##....##..##.....##....##....##.....##.##....##.
+#   .####.##....##.##.......########..#######..##.....##.########..########...........#######..##........########.##.....##.##.....##....##.....#######..##.....##
+##########################################################################################################
+boss__influxdb__operator__subdomain: influxdb
+boss__influxdb__operator__manifest_path: "{{manifest_dir_path}}/influxdb-operator"
+boss__influxdb__operator__namespace_name: monitoring
+boss__influxdb__operator__name: influxdata-operator
+
+
+boss__influxdb__operator__ingress_annotations: |
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
+
+boss__influxdb__operator__ingress_labels: |
+  k8s-app: influxdata-operator
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: influxdb
+  app: influxdata-operator
+
+boss__influxdb__operator__deployment_labels: |
+  app: influxdata-operator
+  name: influxdata-operator
+
+boss__influxdb__operator__service_labels: |
+    k8s-app: influxdata-operator
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    kubernetes.io/name: "influxdata-operator"
+    name: influxdata-operator
+    boss-part-of: influxdb
+    app: influxdata-operator
+
+boss__influxdb__operator__persistent_volume_claim_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: influxdata-operator
+  kubernetes.io/name: "influxdata-operator"
+  name: influxdata-operator
+  boss-part-of: influxdb
+  app: influxdata-operator
+
+boss__influxdb__operator__persistent_volume_claim_spec_resources_requests_storage: "2Gi"
+
+boss__influxdb__operator__persistent_volume_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: influxdata-operator
+  kubernetes.io/name: "influxdata-operator"
+  name: influxdata-operator
+  boss-part-of: influxdb
+  app: influxdata-operator
+
+boss__influxdb__operator__version: 1.6.6
+boss__influxdb__operator__image_repo: "influxdb"
+boss__influxdb__operator__image_tag: "{{ boss__influxdb__operator__version }}"
+boss__influxdb__operator__cpu_limit: 1000m
+boss__influxdb__operator__mem_limit: 4048Mi
+boss__influxdb__operator__cpu_requests: 100m
+boss__influxdb__operator__mem_requests: 2350Mi
+
+boss__influxdb__operator__service_account_labels: |
+  k8s-app: influxdata-operator
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  kubernetes.io/name: "influxdata-operator"
+  name: influxdata-operator
+  boss-part-of: influxdb
+  app: influxdata-operator
+
+boss__influxdb__operator__cluster_role_labels: |
+  k8s-app: influxdata-operator
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  kubernetes.io/name: "influxdata-operator"
+  name: influxdata-operator
+  boss-part-of: influxdb
+  app: influxdata-operator
+
+boss__influxdb__operator__cluster_role_binding_labels: |
+  k8s-app: influxdata-operator
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  kubernetes.io/name: "influxdata-operator"
+  name: influxdata-operator
+  boss-part-of: influxdb
+  app: influxdata-operator
+
 #######################
 
 vagrant_playbook_enable_role_tools: "enabled"
