--- a/extra_playbooks/roles/kubernetes-apps/influxdb-operator/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/influxdb-operator/tasks/main.yaml
@@ -1,22 +1,14 @@
 ---
-- name: "efk | Create directory: {{boss__efk__manifest_path}}"
+- name: "influxdb-operator | Create directory: {{boss__influxdb__operator__manifest_path}}"
   file:
-    path: "{{boss__efk__manifest_path}}"
+    path: "{{boss__influxdb__operator__manifest_path}}"
     state: directory
 
-- name: "efk | Write manifests (RBAC)"
+- name: "influxdb-operator | Write manifests (RBAC)"
   template:
     src: "{{ item }}.j2"
-    dest: "{{ boss__efk__manifest_path }}/{{ item }}"
+    dest: "{{ boss__influxdb__operator__manifest_path }}/{{ item }}"
   with_items:
-    - "0elasticsearch-pvc.yaml"
-    - "elasticsearch-ingress.yaml"
-    - "es-curator-secret.yaml"
-    - "es-curator.yaml"
-    - "es-service.yaml"
-    - "es-statefulset.yaml"
-    - "fluentd-es-configmap.yaml"
-    - "fluentd-es-ds.yaml"
-    - "kibana-deployment.yaml"
-    - "kibana-ingress.yaml"
-    - "kibana-service.yaml"
+    - "000influxdb-pvc.yaml"
+    - "1influxdb-operator-bundle.yaml"
+    - "influxdb-operator-ingress.yaml"
