--- a/playbooks/kubectl_debug.yml
+++ b/playbooks/kubectl_debug.yml
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# USAGE: ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars 'cluster=borg' --skip-tags "pause"
+# USAGE: ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars 'cluster=borg variable_host=servers' --skip-tags "pause"
 # env ANSIBLE_STRATEGY=debug KUBECONFIG=~/dev/bossjones/kubernetes-cluster/borg-admin.conf ansible-playbook  -i contrib/inventory_builder/inventory/borg/inventory.ini playbooks/kubectl_debug.yml -vvvvvv
 ---
 ##############################################################################
@@ -10,20 +10,20 @@
 #
 #
 # DRY RUN(with pause):
-# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg" --check -f 10
+# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg variable_host=servers" --check -f 10
 #
 # REAL RUN(w/o pause):
-# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg" --skip-tags -f 10 "pause"
+# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg variable_host=servers" --skip-tags -f 10 "pause"
 #
 # TAG LOOKUP:
-# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg" --tag lookup -f 10
+# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg variable_host=servers" --tag lookup -f 10
 #
 # REAL RUN:
-# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg" -f 10
+# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg variable_host=servers" -f 10
 ##############################################################################
 - name: debug kubernetes cluster
   # masters
-  hosts: servers
+  hosts: "{{ variable_host | default('servers') }}"
   strategy: free
   gather_facts: False
   become: yes
@@ -169,5 +169,10 @@
     - name: Clean up collected command outputs
       file: path={{ item.name }} state=absent
       with_items: "{{commands}}"
+      register: task_result
+      until: task_result.rc == 0
+      retries: 10
+      delay: 1
+      ignore_errors: yes
 
     - debug: msg="you can now find the files in /tmp/{{ archive_dirname }}/commands /tmp/{{ archive_dirname }}/logs"
