--- a/playbooks/kubectl_debug.yml
+++ b/playbooks/kubectl_debug.yml
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# USAGE: ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars 'cluster=borg variable_host=servers' --skip-tags "pause"
+# USAGE: ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars 'variable_non_rootuser=pi cluster=borg variable_host=servers dir=./' --skip-tags "pause"
 # env ANSIBLE_STRATEGY=debug KUBECONFIG=~/dev/bossjones/kubernetes-cluster/borg-admin.conf ansible-playbook  -i contrib/inventory_builder/inventory/borg/inventory.ini playbooks/kubectl_debug.yml -vvvvvv
 ---
 ##############################################################################
@@ -10,28 +10,31 @@
 #
 #
 # DRY RUN(with pause):
-# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg variable_host=servers" --check -f 10
+# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "variable_non_rootuser=pi cluster=borg variable_host=servers dir=./" --check -f 10
 #
 # REAL RUN(w/o pause):
-# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg variable_host=servers" --skip-tags -f 10 "pause"
+# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "variable_non_rootuser=pi cluster=borg variable_host=servers dir=./" --skip-tags -f 10 "pause"
 #
 # TAG LOOKUP:
-# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg variable_host=servers" --tag lookup -f 10
+# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "variable_non_rootuser=pi cluster=borg variable_host=servers dir=./" --tag lookup -f 10
 #
 # REAL RUN:
-# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "cluster=borg variable_host=servers" -f 10
+# ansible-playbook playbooks/kubectl_debug.yaml -i contrib/inventory_builder/inventory/borg/inventory.ini --extra-vars "variable_non_rootuser=pi cluster=borg variable_host=servers dir=./" -f 10
 ##############################################################################
 - name: debug kubernetes cluster
   # masters
   hosts: "{{ variable_host | default('servers') }}"
-  strategy: free
+  # strategy: free
   gather_facts: False
   become: yes
   become_method: sudo
+  become_user: "root"
   vars:
     debug_folder: '~/.homelab_debugging'
+    non_rootuser: "{{ variable_non_rootuser | default('pi') }}"
     docker_bin_dir: /usr/bin
     bin_dir: /usr/local/bin
+    dir: "{{ playbook_dir }}/../"
     ansible_ssh_pipelining: true
     # etcd_cert_dir: /etc/ssl/etcd/ssl
     kube_network_plugin: calico
@@ -133,7 +136,20 @@
       - /var/log/messages
       - /var/log/dmesg
 
+  environment:
+    KUBECONFIG: "/home/ {{ playbook_dir }}/../{{cluster}}-admin.conf"
+
   tasks:
+    # Same as above but you normally have ansible_connection set in inventory, which overrides 'connection'
+    - name: Wait 300 seconds for port 22 to become open and contain "OpenSSH"
+      wait_for:
+        port: 22
+        host: '{{ (ansible_ssh_host|default(ansible_host))|default(inventory_hostname) }}'
+        search_regex: OpenSSH
+        delay: 10
+      # vars:
+      #   ansible_connection: local
+
     - name: 'mkdir -p ~/.homelab_debugging'
       shell: 'mkdir -p ~/.homelab_debugging'
       changed_when: False
@@ -166,11 +182,12 @@
       become: false
       run_once: true
 
+    # SOURCE: https://www.reddit.com/r/ansible/comments/7rkts2/ansible_to_retry_a_task/
     - name: Clean up collected command outputs
       file: path={{ item.name }} state=absent
       with_items: "{{commands}}"
       register: task_result
-      until: task_result.rc == 0
+      until: task_result | succeeded
       retries: 15
       delay: 5
       ignore_errors: yes
