wip: collect-info

--- a/playbooks/install_rpi_monitoring.yml
+++ b/playbooks/install_rpi_monitoring.yml
@@ -47,6 +47,15 @@
         when: ansible_version.full is version('2.6', '>=')
 
   tasks:
+    # Same as above but you normally have ansible_connection set in inventory, which overrides 'connection'
+    - name: Wait 300 seconds for port 22 to become open and contain "OpenSSH"
+      wait_for:
+        port: 22
+        host: '{{ (ansible_ssh_host|default(ansible_host))|default(inventory_hostname) }}'
+        search_regex: OpenSSH
+        delay: 10
+      # vars:
+      #   ansible_connection: local
     - debug:
         msg: '{{ playbook_dir }}/../vars/clear/{{ cluster }}_manifest.yml'
   roles:
