--- a/playbooks/kubectl_debug.yml
+++ b/playbooks/kubectl_debug.yml
@@ -40,7 +40,11 @@
         dest: "./kube.tar.gz"
       delegate_to: localhost
       become: false
-      run_once: true
+
+##############################################################################################################################
+##############################################################################################################################
+##############################################################################################################################
+##############################################################################################################################
 
 - name: playbook | make sure all workers can access admin kubectl
   # masters
@@ -55,14 +59,6 @@
     kube_config_path: "/home/{{non_rootuser}}/.kube/config"
 
   tasks:
-  # - name: Fetch the file from master to the worker node
-  #   run_once: yes
-  #   fetch:
-  #     src: "/home/{{non_rootuser}}/.kube/config"
-  #     dest: /home/{{non_rootuser}}/.kube/
-  #     flat: yes
-  #     fail_on_missing: yes
-
   - name: "Check if /home/{{non_rootuser}}/kube.tar.gz path exists"
     stat: path=/home/{{non_rootuser}}/kube.tar.gz
     register: check_admin_config_path
@@ -71,44 +67,17 @@
     tags: sync-push
     synchronize:
       src: "./kube.tar.gz"
-      dest: "/home/{{non_rootuser}}/kube.tar.gz"
+      dest: "rsync://{{inventory_hostname}}/kube.tar.gz"
       mode: push
+      set_remote_user: "{{non_rootuser}}"
     # delegate_to: "{{groups['masters'][0]}}"
     register: syncfile
     when: check_admin_config_path.stat.exists == false
-
-  # - name: kube.tar.gz | Pack results and logs
-  #   archive:
-  #     path: "/home/{{non_rootuser}}/.kube"
-  #     dest: "/home/{{non_rootuser}}/kube.tar.gz"
-  #   delegate_to: localhost
-  #   become: false
-  #   run_once: true
-
   - name: Unarchive a file that is already on the remote machine
     unarchive:
       src: "/home/{{non_rootuser}}/kube.tar.gz"
       dest: "/tmp"
       remote_src: yes
-    become: false
-    run_once: true
-
-  # - name: Sync Pull task - Executed on "{{groups['app'][0]}}"
-  #   hosts: "{{groups['app'][0]}}"
-  #   user: "{{non_rootuser}}"
-  #   tasks:
-  #     - name: Copy the file from mwiapp01 to mwiapp02 using Method Pull
-  #       tags: sync-pull
-  #       synchronize:
-  #         src: "/home/{{non_rootuser}}/.kube/config"
-  #         dest: "/home/{{non_rootuser}}/.kube/config"
-  #         mode: pull
-  #       delegate_to: "{{groups['masters'][0]}}"
-  #       register: syncfile
-  #       run_once: true
-  #       with_items:
-  #        - "{{groups['variable_host']}}"
-
 
 - name: debug kubernetes cluster
   # masters
